[package]
authors = [
  "Alec Moskvin <alecm@gmx.com>",
  "Angel Leon <gubatron@gmail.com>",
  "Cecile Tonglet <cecile.tonglet@cecton.com>",
  "Daniel Dulaney <ddy@vitronic.com>",
  "Ivan Stankovic <pokemon@fly.srk.fer.hr>",
  "Ivan Ukhov <ivan.ukhov@gmail.com>",
  "Jake Kerr <kodafox@gmail.com>",
  "Jayson Reis <santosdosreis@gmail.com>",
  "Pierre Krieger <pierre.krieger1708@gmail.com>",
  "Sean Klein <seanmarionklein@gmail.com>",
  "Sophie Tauchert <999eagle@999eagle.moe>",
  "Tomoki Aonuma <uasi@uasi.jp>",
  "Yorhel <git@yorhel.nl>",
  "Yuriy Voshchepynets <yuriy.voshchepynets@ckreator.com>",
]
categories = ["api-bindings", "database", "lunatic"]
description = "The package provides an interface to SQLite."
documentation = "https://docs.rs/sqlite-bindings-lunatic"
homepage = "https://github.com/SquattingSocrates/sqlite"
keywords = ["database"]
license = "Apache-2.0/MIT"
name = "sqlite-bindings-lunatic"
readme = "README.md"
repository = "https://github.com/SquattingSocrates/sqlite"
version = "0.30.4"

[features]
default = ["linkage"]
linkage = ["sqlite3-sys/linkage"]

[dependencies]
libc = "0.2"

[dependencies.sqlite3-sys]
default-features = false
version = "0.14"

[dev-dependencies]
temporary = "0.6"
